Added code figuring out min and max dimensions of all voxel models in a ShapeNet folder

--- a/voxel-tools/read_binvox.ipynb
+++ b/voxel-tools/read_binvox.ipynb
@@ -6,16 +6,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy as np"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from binvox_rw_py import binvox_rw"
+    "import numpy as np\n",
+    "from binvox_rw_py import binvox_rw\n",
+    "import os\n",
+    "import glob"
    ]
   },
   {
@@ -183,6 +177,99 @@
    ],
    "source": [
     "model.data.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "root_directory = '../../datasets/shapenet/02843684/'\n",
+    "\n",
+    "# Get a list of immediate subfolders\n",
+    "subfolders = [f.path for f in os.scandir(root_directory) if f.is_dir()]\n",
+    "n_subfolders = len(subfolders)\n",
+    "model_dims = np.zeros((n_subfolders,3))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "i = 0\n",
+    "# Iterate through immediate subfolders\n",
+    "for folder_path in subfolders:\n",
+    "    folder_name = folder_path.split('/')[-1]\n",
+    "\n",
+    "    # Check for files in the models folder with the extension \"*.solid.binvox\"\n",
+    "    binvox_files = glob.glob(os.path.join(folder_path,'models',\"*.solid.binvox\"))\n",
+    "    # Process the files if found\n",
+    "    if binvox_files:\n",
+    "        # print(f\"Files found in {folder_name}:\")\n",
+    "        for file_path in binvox_files:\n",
+    "            # print(f\" - {file_path}\")\n",
+    "            with open(file_path, 'rb') as f:\n",
+    "                model = binvox_rw.read_as_3d_array(f) # Voxels object\n",
+    "                model_dims[i,:] = model.dims\n",
+    "                i+=1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "min_size_x = min(model_dims[:,0])\n",
+    "min_size_y = min(model_dims[:,1])\n",
+    "min_size_z = min(model_dims[:,2])\n",
+    "\n",
+    "max_size_x = max(model_dims[:,0])\n",
+    "max_size_y = max(model_dims[:,1])\n",
+    "max_size_z = max(model_dims[:,2])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(128.0, 128.0, 128.0)"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "min_size_x, min_size_y, min_size_z"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(128.0, 128.0, 128.0)"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "max_size_x, max_size_y, max_size_z"
    ]
   },
   {
