writing shapenet voxel as a JSON and downscaling the voxel model by scale factor of 2

--- a/voxel-tools/write_json.ipynb
+++ b/voxel-tools/write_json.ipynb
@@ -193,6 +193,67 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "design_dict = {\n",
+    "    \"ID\": 0,\n",
+    "    \"lastModified\": \"2024-01-05 20:25:55\",\n",
+    "    \"lastAuthor\": \"user\",\n",
+    "    \"objectList\": []\n",
+    "}\n",
+    "\n",
+    "scale_down_factor = 2\n",
+    "\n",
+    "s = scale_down_factor\n",
+    "\n",
+    "x = 0\n",
+    "vx = 0\n",
+    "while (x<max_x):\n",
+    "    y = 0\n",
+    "    vy = 0\n",
+    "    while (y<max_y):\n",
+    "        z = 0\n",
+    "        vz = 0\n",
+    "        while (z<max_z):\n",
+    "            boolean_list = model.data[x:x+s,y:y+s,z:z+s].ravel().tolist()\n",
+    "            count_true = sum(boolean_list)\n",
+    "            if(count_true >= 3):\n",
+    "                cube[\"position\"][\"x\"] = vx\n",
+    "                cube[\"position\"][\"y\"] = vy\n",
+    "                cube[\"position\"][\"z\"] = vz\n",
+    "\n",
+    "                # Convert the dictionary to a string in the specified format\n",
+    "                result_string = json.dumps(cube, separators=(',', ':'))\n",
+    "\n",
+    "                # Add cube to objectList\n",
+    "                design_dict[\"objectList\"].append(result_string)\n",
+    "            z += scale_down_factor\n",
+    "            vz +=1\n",
+    "        y += scale_down_factor\n",
+    "        vy += 1\n",
+    "    x += scale_down_factor\n",
+    "    vx += 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Specify the file path\n",
+    "file_path = \"design_shapenet_downscale.json\"\n",
+    "\n",
+    "# Write the dictionary to the JSON file\n",
+    "with open(file_path, 'w') as json_file:\n",
+    "    json.dump(design_dict, json_file)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
