--- a/block-laying-agent/reference/convolutions.ipynb
+++ b/block-laying-agent/reference/convolutions.ipynb
@@ -74,9 +74,9 @@
     {
      "data": {
       "text/plain": [
-       "tensor([[-0.6363,  1.3144, -1.9369,  2.6149],\n",
-       "        [ 0.5970, -0.0584,  1.0339, -0.4953],\n",
-       "        [-0.6340,  0.5947, -1.4532,  1.4138]], grad_fn=<SqueezeBackward1>)"
+       "tensor([[ 0.4199, -1.2442,  1.5293, -2.3536],\n",
+       "        [-1.6959,  1.9577, -4.1316,  4.3934],\n",
+       "        [ 1.0827, -1.3246,  2.6876, -2.9294]], grad_fn=<SqueezeBackward1>)"
       ]
      },
      "execution_count": 4,
@@ -104,7 +104,7 @@
     {
      "data": {
       "text/plain": [
-       "tensor([[0.3174, 0.5420, 0.1677, 0.6918]], grad_fn=<SqueezeBackward1>)"
+       "tensor([[ 0.5089, -0.5794,  1.2343, -1.3048]], grad_fn=<SqueezeBackward1>)"
       ]
      },
      "execution_count": 5,
@@ -152,7 +152,7 @@
     {
      "data": {
       "text/plain": [
-       "tensor([[0.3071, 0.5420, 0.1677, 0.6918]], grad_fn=<SqueezeBackward1>)"
+       "tensor([[ 2.1653, -0.5794,  1.2343, -1.3048]], grad_fn=<SqueezeBackward1>)"
       ]
      },
      "execution_count": 7,
@@ -182,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -193,16 +193,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tensor([[-0.0663, -0.1553, -0.2584]], grad_fn=<SqueezeBackward1>)"
+       "tensor([[-0.6641, -0.0195, -0.7246]], grad_fn=<SqueezeBackward1>)"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -227,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -238,16 +238,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tensor([[ 0.3261, -0.1553, -0.2584]], grad_fn=<SqueezeBackward1>)"
+       "tensor([[ 0.4407, -0.0195, -0.7246]], grad_fn=<SqueezeBackward1>)"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -265,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -276,16 +276,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tensor([[-1.7004,  0.2862, -0.2584]], grad_fn=<SqueezeBackward1>)"
+       "tensor([[-0.6070,  1.2234, -0.7246]], grad_fn=<SqueezeBackward1>)"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -310,7 +310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -321,16 +321,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tensor([[2.3588, 5.1508]], grad_fn=<SqueezeBackward1>)"
+       "tensor([[0.4899, 0.6001]], grad_fn=<SqueezeBackward1>)"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -349,7 +349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -360,16 +360,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tensor([[1.8749, 5.1508]], grad_fn=<SqueezeBackward1>)"
+       "tensor([[-0.0683,  0.6001]], grad_fn=<SqueezeBackward1>)"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -398,7 +398,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -410,7 +410,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -419,7 +419,7 @@
        "torch.Size([1, 3, 4])"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -430,7 +430,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -440,7 +440,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -449,17 +449,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tensor([[[ 0.7676, -1.5100,  1.7448],\n",
-       "         [ 0.7676, -1.5100,  1.7448]]], grad_fn=<SqueezeBackward1>)"
+       "tensor([[[-0.1720, -0.1394,  0.0036],\n",
+       "         [-0.1720, -0.1394,  0.0036]]], grad_fn=<SqueezeBackward1>)"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -470,7 +470,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -479,7 +479,7 @@
        "torch.Size([1, 2, 3])"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -497,7 +497,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -506,20 +506,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tensor([[[-1.1542,  0.5475, -1.6058],\n",
-       "         [-1.1542,  0.5475, -1.6058]],\n",
+       "tensor([[[ 0.9437, -0.4663,  1.6787],\n",
+       "         [ 0.9437, -0.4663,  1.6787]],\n",
        "\n",
-       "        [[ 1.2524, -1.7529,  3.0810],\n",
-       "         [ 1.2524, -1.7529,  3.0810]]], grad_fn=<SqueezeBackward1>)"
+       "        [[-0.1756,  0.4394, -0.5947],\n",
+       "         [-0.1756,  0.4394, -0.5947]]], grad_fn=<SqueezeBackward1>)"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -537,7 +537,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -546,17 +546,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tensor([[[-1.0783,  1.1446],\n",
-       "         [-1.0783,  1.1446]]], grad_fn=<SqueezeBackward1>)"
+       "tensor([[[ 1.5348, -1.9661],\n",
+       "         [ 1.5348, -1.9661]]], grad_fn=<SqueezeBackward1>)"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -567,7 +567,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -576,16 +576,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tensor([[[-0.5034,  0.7810]]], grad_fn=<SqueezeBackward1>)"
+       "tensor([[[-1.2753,  2.1745]]], grad_fn=<SqueezeBackward1>)"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -610,7 +610,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -619,16 +619,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tensor([[[1.6203]]], grad_fn=<SqueezeBackward1>)"
+       "tensor([[[0.2969]]], grad_fn=<SqueezeBackward1>)"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -646,7 +646,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -658,16 +658,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tensor([[[1.6203]]], grad_fn=<SqueezeBackward1>)"
+       "tensor([[[0.2969]]], grad_fn=<SqueezeBackward1>)"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -687,7 +687,165 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Padding Changed"
+    "### Padding Changed\n",
+    "\n",
+    "Start with original tensor and a (3,3) kernel convolution"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Notice the tensor is now 3D instead of 2D.\n",
+    "x = torch.tensor([[[1., -2., 3., -4.],\n",
+    "                  [1., -2., 3., -4.],\n",
+    "                  [1., -2., 3., -4.]]])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "conv = torch.nn.Conv2d(in_channels = 1, out_channels = 1, kernel_size = 3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[[ 1.2265, -1.7543]]], grad_fn=<SqueezeBackward1>)"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "conv(x)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Change padding from 0 to 1. This adds 1 extra cell on the \"border\" of the tensor. Each cell is filled with value of 0 (`padding_mode='zeros'`)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "conv = torch.nn.Conv2d(in_channels = 1, out_channels = 1, kernel_size = 3, padding=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[[ 0.8060, -1.3511,  2.4074, -1.7916],\n",
+       "         [ 0.7081, -1.2467,  2.2964, -1.6546],\n",
+       "         [ 0.2024, -0.0433,  0.3955,  0.4569]]], grad_fn=<SqueezeBackward1>)"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "conv(x)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Dilation\n",
+    "\n",
+    "Start with original tensor and a (2,2) kernel convolution\n",
+    "\n",
+    "NOTE: Default `dilation=1` not 0!!!!"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "conv = torch.nn.Conv2d(in_channels = 1, out_channels = 1, kernel_size = 2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[[ 0.0578, -0.6624, -0.0847],\n",
+       "         [ 0.0578, -0.6624, -0.0847]]], grad_fn=<SqueezeBackward1>)"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "conv(x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "conv = torch.nn.Conv2d(in_channels = 1, out_channels = 1, kernel_size = 2, dilation=2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[[-1.3338,  0.9549]]], grad_fn=<SqueezeBackward1>)"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "conv(x)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "See \"Dilated convolution animations\" in https://github.com/vdumoulin/conv_arithmetic/blob/master/README.md for visualization of dilations"
    ]
   },
   {
