Generate surface voxel model json

--- a/voxel-tools/write_json.ipynb
+++ b/voxel-tools/write_json.ipynb
@@ -19,7 +19,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "filepath = '../../datasets/shapenet/02843684/1b73f96cf598ef492cba66dc6aeabcd4/models/model_normalized.solid.binvox'"
+    "filepath = '../../datasets/shapenet/02843684/1b73f96cf598ef492cba66dc6aeabcd4/models/model_normalized.surface.binvox'"
    ]
   },
   {
@@ -127,7 +127,7 @@
     {
      "data": {
       "text/plain": [
-       "298893"
+       "80086"
       ]
      },
      "execution_count": 9,
@@ -184,7 +184,7 @@
    "outputs": [],
    "source": [
     "# Specify the file path\n",
-    "file_path = \"design_shapenet.json\"\n",
+    "file_path = \"design_shapenet_surface.json\"\n",
     "\n",
     "# Write the dictionary to the JSON file\n",
     "with open(file_path, 'w') as json_file:\n",
@@ -193,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -240,12 +240,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Specify the file path\n",
-    "file_path = \"design_shapenet_downscale.json\"\n",
+    "file_path = \"design_shapenet_surface_downscale.json\"\n",
     "\n",
     "# Write the dictionary to the JSON file\n",
     "with open(file_path, 'w') as json_file:\n",
@@ -276,7 +276,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.1"
+   "version": "3.11.7"
   }
  },
  "nbformat": 4,
