Rocket binvox JSON files

--- a/voxel-tools/write_json.ipynb
+++ b/voxel-tools/write_json.ipynb
@@ -19,6 +19,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# filepath = '../../datasets/shapenet/02843684/1b73f96cf598ef492cba66dc6aeabcd4/models/model_normalized.surface.binvox'\n",
     "filepath = '../../datasets/shapenet/02843684/1b73f96cf598ef492cba66dc6aeabcd4/models/model_normalized.surface.binvox'"
    ]
   },
