--- a/voxel-tools/write_json.ipynb
+++ b/voxel-tools/write_json.ipynb
@@ -209,6 +209,8 @@
     "\n",
     "scale_down_factor = 2\n",
     "\n",
+    "cells = 0\n",
+    "total = 0\n",
     "s = scale_down_factor\n",
     "\n",
     "x = 0\n",
@@ -232,12 +234,74 @@
     "\n",
     "                # Add cube to objectList\n",
     "                design_dict[\"objectList\"].append(result_string)\n",
+    "                cells += 1\n",
     "            z += scale_down_factor\n",
     "            vz +=1\n",
+    "            total+=1\n",
     "        y += scale_down_factor\n",
     "        vy += 1\n",
     "    x += scale_down_factor\n",
     "    vx += 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "262144"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "total"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2934"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cells"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.01119232177734375"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cells/total"
    ]
   },
   {
