--- a/voxel-tools/write_json.ipynb
+++ b/voxel-tools/write_json.ipynb
@@ -30,6 +30,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "default_scale_filename = \"shapenet_scale_01.json\"\n",
+    "new_scale_filename = \"shapenet_scale_03.json\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "with open(filepath, 'rb') as f:\n",
     "    model = binvox_rw.read_as_3d_array(f) # Voxels object"
    ]
@@ -154,7 +164,7 @@
    "outputs": [],
    "source": [
     "# Specify the file path\n",
-    "file_path = \"design_shapenet_surface.json\"\n",
+    "file_path = default_scale_filename\n",
     "\n",
     "# Write the dictionary to the JSON file\n",
     "with open(file_path, 'w') as json_file:\n",
@@ -175,7 +185,7 @@
     "    \"objectList\": []\n",
     "}\n",
     "\n",
-    "scale_down_factor = 2\n",
+    "scale_down_factor = 3\n",
     "\n",
     "cells = 0\n",
     "total = 0\n",
@@ -246,7 +256,7 @@
    "outputs": [],
    "source": [
     "# Specify the file path\n",
-    "file_path = \"design_shapenet_surface_downscale.json\"\n",
+    "file_path = new_scale_filename\n",
     "\n",
     "# Write the dictionary to the JSON file\n",
     "with open(file_path, 'w') as json_file:\n",
